<resources>
    <string name="app_name">Learner</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu">Главная</string>

    <string name="lorem_ipsum">
        Text
    </string>
    <string name="search">Search</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="delete_cards">DeleteCards</string>
    <string name="add_question">Add Question</string>
    <string name="questions_text">Questions</string>
    <string name="back">Назад</string>
    <string name="edit">Редактировать</string>
    <string name="answer">Ответ</string>
</resources>