<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/answer_dialog_background"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:id="@+id/dialog_answer_container">

    <TextView
        android:id="@+id/text_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:text="@string/answer"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="start|top"
        android:scrollbars="vertical" />
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
